Gestion des exceptions et des anomalies dans les données

--- a/modele/projet1.ipynb
+++ b/modele/projet1.ipynb
@@ -3073,8 +3073,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "333b6b52-1a0d-4ece-914d-905d7774d594",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'modele/projet1.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "00a731e8-b121-41db-9997-11b151ee1c49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes to be committed:\n",
+      "  (use \"git restore --staged <file>...\" to unstage)\n",
+      "\tnew file:   .ipynb_checkpoints/projet1-checkpoint.ipynb\n",
+      "\tmodified:   projet1.ipynb\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "fd7bf2d0-4e60-466a-8666-111386a39679",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 045150c] Gestion des exceptions et des anomalies dans les donnÃ©es\n",
+      " 2 files changed, 2918 insertions(+), 100 deletions(-)\n",
+      " create mode 100644 modele/.ipynb_checkpoints/projet1-checkpoint.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Gestion des exceptions et des anomalies dans les données\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "19607d21-1864-44aa-984f-ad2833e3b1a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/shayann95/Projet_Prediction_Immobilier.git\n",
+      "   46dcd7e..045150c  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7a5ac47-b050-4ff9-b130-e85826e152ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72eb74a4-ce21-4095-848e-b28e40a5f200",
    "metadata": {},
    "outputs": [],
    "source": []
