Construction et comparaison de plusieurs modèles

--- a/modele/projet1.ipynb
+++ b/modele/projet1.ipynb
@@ -4002,23 +4002,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "ac824684-b083-4793-a80d-76c742c259c6",
+   "execution_count": 97,
+   "id": "61fc047d-1721-4c35-abd2-218f96ba05b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'modele/projet1.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
    "source": [
-    "import json \n",
-    "columns = {\n",
-    "    'data_columns' : [col.lower() for col in X.columns]\n",
-    "}\n",
-    "with open(\"columns.json\", \"w\") as f:\n",
-    "    f.write(json.dumps(columns))"
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "47c90c78-a1f8-4536-a0eb-5b121866f5c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 8e0da6b] Construction et comparaison de plusieurs modÃ¨les\n",
+      " 3 files changed, 1133 insertions(+), 145 deletions(-)\n",
+      " create mode 100644 modele/columns.json\n",
+      " create mode 100644 modele/model_home_price_prediction.pickle\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Construction et comparaison de plusieurs modèles\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "6dea6d0f-31be-459d-8ba1-4b273b002fb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/shayann95/Projet_Prediction_Immobilier.git\n",
+      "   18fb4e4..8e0da6b  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61fc047d-1721-4c35-abd2-218f96ba05b0",
+   "id": "a935f90f-ab74-4fc9-bcfd-02b28d9190d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1249207-2555-4b52-b319-31b54e6b9bc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d47f29e0-a169-415e-959a-8b1615f4ede4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4045,27 +4104,6 @@
    "id": "53227f93-4d82-4718-a99e-2757dd7991af",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "66ea1dd5-7faa-4852-935b-37e13030909d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'n_splits' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[87]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mfind_best_model_using_gridsearchcv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[86]\u001b[39m\u001b[32m, line 25\u001b[39m, in \u001b[36mfind_best_model_using_gridsearchcv\u001b[39m\u001b[34m(X, y)\u001b[39m\n\u001b[32m      2\u001b[39m algos = {\n\u001b[32m      3\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mlinear_regression\u001b[39m\u001b[33m'\u001b[39m : {\n\u001b[32m      4\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mmodel\u001b[39m\u001b[33m'\u001b[39m: LinearRegression(),\n\u001b[32m   (...)\u001b[39m\u001b[32m     22\u001b[39m     }\n\u001b[32m     23\u001b[39m }\n\u001b[32m     24\u001b[39m scores = []\n\u001b[32m---> \u001b[39m\u001b[32m25\u001b[39m cv = ShuffleSplit(\u001b[43mn_splits\u001b[49m, test_size=\u001b[32m0.2\u001b[39m, random_state=\u001b[32m0\u001b[39m)\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m algo_name, config \u001b[38;5;129;01min\u001b[39;00m algos.items():\n\u001b[32m     27\u001b[39m     gs = GridSearchCV(config[\u001b[33m'\u001b[39m\u001b[33mmodel\u001b[39m\u001b[33m'\u001b[39m], config[\u001b[33m'\u001b[39m\u001b[33mparams\u001b[39m\u001b[33m'\u001b[39m], cv=cv, return_train_score=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'n_splits' is not defined"
-     ]
-    }
-   ],
    "source": []
   },
   {
